--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-   "start": "node server.js",
-    "heroku-postbuild": "ng build --prod",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,10 +21,10 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^20.1.2",
-    "@angular/cli": "^20.1.1",
+    
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
-    "@angular/compiler-cli": "^20.1.0",
+    
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
     "@angular/material": "^20.1.2",
@@ -35,21 +34,20 @@
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.2",
+   
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular/cli": "^20.1.1",
+    "@angular/compiler-cli": "^20.1.0",
     "@angular/build": "^20.1.1",
     "@types/jasmine": "~5.1.0",
+     "typescript": "~5.8.2",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0"
-  },
-  "engines": {
-    "node": "22.11.1",
-    "npm": "10.9.2"
   }
 }
