--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --output-path=dist/portfolio-site",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -21,33 +21,31 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^20.1.2",
-    
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
-    
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
     "@angular/material": "^20.1.2",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "express": "^5.1.0",
+    "firebase-tools": "^14.11.0",
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-   
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular/build": "^20.1.1",
     "@angular/cli": "^20.1.1",
     "@angular/compiler-cli": "^20.1.0",
-    "@angular/build": "^20.1.1",
     "@types/jasmine": "~5.1.0",
-     "typescript": "~5.8.2",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.8.2"
   }
 }
